优化配置，移除冗余的URL测试类型，添加fallback_enabled字段以支持备用节点

--- a/rules/7_us.yaml
+++ b/rules/7_us.yaml
@@ -1,5 +1,6 @@
-group_name: '🇺🇸 USA Only'
-type: 'url-test'
+group_name: '🇺🇸 USA'
+type: 'load-balance'
+fallback_enabled: true
 key_word:
   - USA
   - 美国
