Refactor rules configuration: remove old rules and add new structured rules for USA, East Asia, and global connections
- Deleted outdated rules for USA, East Asia, and Hong Kong.
- Introduced new rules for USA and East Asia with comprehensive domain suffixes.
- Added a global direct connection rule set.
- Implemented a global block rule set for specific domains.

--- a/rules/5_direct.yaml
+++ b/rules/5_direct.yaml
@@ -1,7 +1,9 @@
 group_name: '🎯 全球直连'
-type: 'select'
+type: 'fallback'
 key_word:
   - DIRECT
+fallback_group:
+  - '🇭🇰 香港'
 rules:
   - DOMAIN-SUFFIX,acl4.ssr
   - DOMAIN-SUFFIX,ip6-localhost
