--- a/rules/5_direct.yaml
+++ b/rules/5_direct.yaml
@@ -3,8 +3,22 @@ type: 'fallback'
 key_word:
   - DIRECT
 fallback_group:
-  - '🇭🇰 香港'
+  - 🇭🇰 香港'
 rules:
+  - DOMAIN-SUFFIX,itunes.apple.com
+  - DOMAIN-SUFFIX,icloud.com
+  - DOMAIN-SUFFIX,icloud-content.com
+  - DOMAIN-SUFFIX,aaplimg.com
+  - DOMAIN-SUFFIX,cdn20.com
+  - DOMAIN-SUFFIX,cdn-apple.com
+  - DOMAIN-SUFFIX,akadns.net
+  - DOMAIN-SUFFIX,akamaiedge.net
+  - DOMAIN-SUFFIX,edgekey.net
+  - DOMAIN-SUFFIX,mwcloudcdn.com
+  - DOMAIN-SUFFIX,mwcname.com
+  - DOMAIN-SUFFIX,apple.com
+  - DOMAIN-SUFFIX,apple-cloudkit.com
+  - DOMAIN-SUFFIX,apple-mapkit.com
   - DOMAIN-SUFFIX,acl4.ssr
   - DOMAIN-SUFFIX,ip6-localhost
   - DOMAIN-SUFFIX,ip6-loopback
