--- a/rules/1_main.yaml
+++ b/rules/1_main.yaml
@@ -1,11 +1,11 @@
 group_name: '🚀 节点选择'
 rules:
-  - DOMAIN,developer.apple.com
-  - DOMAIN,ocsp.apple.com
+  - DOMAIN-SUFFIX,developer.apple.com
+  - DOMAIN-SUFFIX,ocsp.apple.com
   - DOMAIN-SUFFIX,apple-dns.net
-  - DOMAIN,testflight.apple.com
-  - DOMAIN,sandbox.itunes.apple.com
-  - DOMAIN,itunes.apple.com
+  - DOMAIN-SUFFIX,testflight.apple.com
+  - DOMAIN-SUFFIX,sandbox.itunes.apple.com
+  - DOMAIN-SUFFIX,itunes.apple.com
   - DOMAIN-SUFFIX,apps.apple.com
   - DOMAIN-SUFFIX,blobstore.apple.com
-  - DOMAIN,cvws.icloud-content.com
+  - DOMAIN-SUFFIX,cvws.icloud-content.com
