优化 DNS 配置，调整规则以支持更广泛的域名后缀匹配

--- a/rules/3_ai.yaml
+++ b/rules/3_ai.yaml
@@ -15,7 +15,7 @@ rules:
   - DOMAIN-SUFFIX,gate.com
   - DOMAIN-SUFFIX,bitget.com
   - DOMAIN-SUFFIX,okx.com
-  - DOMAIN,gemini.google.com
+  - DOMAIN-SUFFIX,gemini.google.com
   - DOMAIN-SUFFIX,claude.ai
   - DOMAIN-SUFFIX,chatgpt.com
   - DOMAIN-SUFFIX,openai.com
